k8s-playground/freshrss/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freshrss
  labels:
    app: freshrss
    environment: playground
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
