k8s-playground/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
  labels:
    app: freshrss
spec:
  type: ClusterIP
  selector:
    app: freshrss
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
